# hello-docker

./: Dockerfile  pyproject.toml
hello-docker/: main.py
hello-docker/.devcontainer/: devcontainer.json
